
	- Accept output variables for FETCH in DECLARE statement.
	
Tue Sep 16 07:56:14 CEST 2003

	- Synced parser.
	- Allowed C variables to carry the name of prepared statements.
	
Thu Sep 18 14:54:47 CEST 2003

	- Added Informix handling of datatype converion errors.
	
Fri Sep 19 08:33:39 CEST 2003

	- Some code cleanup
	
Sat Sep 20 11:06:13 CEST 2003

	- Applied some bug fixing patches by Dave Cramer <dave@fastcrypt.com>.
	- Added protecting defines to include files.
	- Renamed my own strndup() function because of a name clash.
	
Mon Sep 22 15:13:02 CEST 2003

	- Fixed order mismatch in processing "using" arguments.
	- Fixed some minor things in test cases.
	- Use defines for Informix error codes.

Tue Sep 23 14:50:45 CEST 2003

	- Changed struct definition handling so "struct foo {}" always gets
	  defined.
	  
Fri Sep 26 17:14:07 CEST 2003

	- Incorrect datatype with precision argument should not create a
	  segfault.
	  
Fri Oct  3 12:04:57 CEST 2003

	- Hide Informix datatypes in PostgreSQL built process.
	
Sun Oct  5 13:08:47 CEST 2003

	- Fixed bug in day of week calculation.
	
Mon Oct  6 08:41:45 CEST 2003

	- Fixed constant listing in execute using clause.
	- Fixed typo in ecpg for Informix dec_t type.
	- Fixed precision handling in Informix compat funxtions.
	
Tue Oct  7 07:45:09 CEST 2003

	- Fixed error handling in rstrdate.
	
Tue Oct  7 20:26:06 CEST 2003

	- Fixed floating point exception in long=>numeric transformation.
	
Sun Oct 19 15:20:16 CEST 2003

	- Need to check for both Informic compat modes when parsing include
	  files.
	  
Mon Oct 20 14:53:40 CEST 2003

	- Install dummy sqlda.h file.
	
Sun Oct 26 10:47:05 CET 2003

	- Fixed bug with indicators when storage for the
	  string is dynamically allocated
	  
Thu Oct 30 11:12:37 CET 2003

	- Applied patch by Dave Cramer fixing several bugs in compatlib.
	- Set ecpg version to 3.0.0
	- Set ecpg library to 4.0.0
	- Set pgtypes library to 1.0.0
	- Set compat library to 1.0.0
